complete life cycle hook

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
     <script type="module" src="/build/advance.esm.js"></script>
   </head>
   <body>
-    <nn-stock-price />
+    <nn-stock-price stock-symbol="aapl" />
   </body>
 </html>
