--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <script type="module" src="/build/advance.esm.js"></script>
   </head>
   <body>
+    <nn-stock-finder></nn-stock-finder>
     <nn-stock-price stock-symbol="aapl" />
   </body>
 </html>
